k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tprm-agent
  labels:
    name: tprm-agent
    environment: production
